--- a/thread/CMakeLists.txt
+++ b/thread/CMakeLists.txt
@@ -17,3 +17,4 @@ add_executable(condtest condtest.cc ${SRC})
 add_executable(timeout timeout.cc ${SRC})
 add_executable(mutex_test mutex_test.cc ${SRC})
 add_executable(sort sort.cc ${SRC})
+add_executable(atomictest atomictest.cc ${SRC})
